# anomalyBert

./: .gitignore  MODEL-CARD.md  README.md  anomalyBert-notebook.md  anomalyBert.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: build-train.yml
data/synthetic_eval/: collective_anomaly_100.csv  contextual_anomaly_100.csv  flat_signal_100.csv  frequency_change_100.csv  noise_burst_100.csv  point_anomaly_100.csv  seasonal_with_anomaly_100.csv  trend_shift_100.csv
notebooks/: compare_anomalies.ipynb
src/anomalybert/: __init__.py
src/anomalybert/cli/: detect.py  export.py  generate.py  main.py  train.py
src/anomalybert/data/: dataset.py  normalization.py  synthetic.py  tokenizer.py
src/anomalybert/inference/: detector.py  onnx_detector.py  onnx_export.py
src/anomalybert/model/: anomalybert.py  attention.py  config.py  embedding.py  encoder.py  heads.py
src/anomalybert/training/: checkpoint.py  loss.py  trainer.py
tests/: conftest.py  test_cli.py  test_embedding.py  test_inference.py  test_model.py  test_normalization.py  test_onnx.py  test_synthetic.py  test_tokenizer.py  test_training.py
