[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anomalybert"
version = "0.1.0"
description = "Anomaly detection in timeseries data using encoder-only transformer architecture"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0,<3.0",
    "numpy>=1.24,<2.0",
    "pandas>=2.0,<3.0",
    "scikit-learn>=1.3,<2.0",
    "click>=8.0,<9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
onnx = [
    "onnx>=1.14",
    "onnxruntime>=1.15",
]

[project.scripts]
anomalybert = "anomalybert.cli.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
